--- a/style.css
+++ b/style.css
@@ -3,6 +3,55 @@
   margin: 0;
   box-sizing: border-box;
 }
+.main-Area {
+  .text-area {
+    h1,
+    p {
+      margin: 0;
+      padding: 0;
+      border: 0;
+      font-size: 100%;
+      font: inherit;
+      vertical-align: baseline;
+    }
+  }
+}
+
+.main-Area {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 2px dashed gray;
+  margin: auto;
+  .text-area {
+    align-items: center;
+    justify-content: center;
+    margin: 2rem;
+
+    h1 {
+      color: rgb(99, 99, 99);
+
+      font-size: 3rem;
+    }
+    p {
+      color: rgb(99, 99, 99);
+      margin: 1rem;
+      font-size: 1.2rem;
+    }
+    .start,
+    .restart-game {
+      padding: 0.2rem;
+      background-color: gray;
+      color: white;
+      font-size: 1.2rem;
+      border-radius: 10%;
+    }
+  }
+  .game-area {
+    margin: 2rem;
+  }
+}
+
 #myCanvas {
   background-color: wheat;
   border: solid 5px darkgray;
