--- a/style.css
+++ b/style.css
@@ -38,8 +38,7 @@
       margin: 1rem;
       font-size: 1.2rem;
     }
-    .start,
-    .restart-game {
+    .start {
       padding: 0.2rem;
       background-color: gray;
       color: white;
